# ReverseBits

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.cspell/: custom-dictionary-workspace.txt
src/: lib.rs
src/revbits/: __init__.py  __main__.py  _core.pyi  cli.py  reverser.py
tests/: test_cli.py  test_reverse.py  test_version.py
