[package]
name = "revbits"
version = "0.1.3"
edition = "2024"
authors = ["cashmere53 <15913755+cashmere53@users.noreply.github.com>"]
description = "High-performance bit reversal library for Python, implemented in Rust"
license = "MIT"
repository = "https://github.com/cashmere53/ReverseBits"
keywords = ["bit-reversal", "python", "pyo3"]
categories = ["algorithms", "api-bindings"]

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = { version = "0.27.1", features = ["extension-module", "abi3-py39"] }
